syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_tables.proto";
import "pb_views.proto";

enum MediaTypeEnum {
    MEDIA_IMAGE = 0;
    MEDIA_VIDEO = 1;
}

enum FollowingEnum {
    FOLLOWING_NONE = 0;
    FOLLOWING = 1;
    REQUESTED = 2;
    BLOCKED = 3;
}

enum UserTypeEnum {
    USER = 0;
    CHANNEL = 1;
}

enum UserLevelEnum{
    LEVEL_NORMAL = 0;
    APP_ADMIN = 1;
    SUSPONDED = 2;
    DELETED_BY_OWENER = 3;
    DELETED_IRAN = 4;
    SUSPONDED_IRAN = 5;
}

enum UserOnlinePrivacyEnum{
    E4 = 0;
}

enum UserOnlineStatusEnum{
    EXACTLY = 0;
    ONLINE = 1;
    CONNECTED = 2 ;
    FEW_DAYS_AGO = 3 ;
    RECENTLY = 4;
    LAST_WEEK = 5;
    LAST_MONTH = 6;
    LONG_TIME_AGO = 7;
    HIDE = 8;
}

enum PostTypeEnum{
    POST_RESHARED = 0;
    POST_TEXT = 1;
    POST_PHOTO = 2;
    POST_VIDEO = 3;
    POST_GIFS = 4;
    POST_AUDIO = 5;
    POST_GIF = 6;
    POST_FILE = 7;
    POST_POLL = 8;
}

enum NotifyEnum{
    NOTIFY_POST_LIKED = 0;
    NOTIFY_POST_COMMENTED = 1;
    NOTIFY_FOLLOWED_YOU = 2;
}

enum ActionEnum{
    ACTION_POST_LIKED = 0;
    ACTION_POST_COMMENTED = 1;
    ACTION_FOLLOWED_USER = 2;
}
